--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ matrix:
     - name: "Python 2.7 on Windows"
       os: windows
       language: shell
+      before_install:
+        - choco install python2
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
 install:
   - pip install six
   - pip install future
