--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,29 @@ matrix:
     - name: "Python 2.7 on Ubuntu 16.04"
       os: precise
       python: 2.7
+      install:
+        - pip install six
+        - pip install future
+      script:
+        - python -m request_parser.tests.requests.requests
+        - python -m request_parser.tests.settings.settings
+        - python -m request_parser.tests.uploadhandlers.uploadhandlers
     - name: "Python 2.7 on OSX"
       os: osx
       language: shell
-    - name: "Python 2.7 on Windows"
-      os: windows
-      language: shell
-      before_install:
-        - choco install python2
-        - python -m pip install --upgrade pip
-      env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
-install:
-  - pip install six
-  - pip install future
-script:
-  - python -m request_parser.tests.requests.requests
-  - python -m request_parser.tests.settings.settings
-  - python -m request_parser.tests.uploadhandlers.uploadhandlers
+      install:
+        - pip install six
+        - pip install future
+      script:
+        - python -m request_parser.tests.requests.requests
+        - python -m request_parser.tests.settings.settings
+        - python -m request_parser.tests.uploadhandlers.uploadhandlers
+#    - name: "Python 2.7 on Windows"
+#      os: windows
+#      language: shell
+#      before_install:
+#        - choco install python2
+#        - python -m pip install --upgrade pip
+#      env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
+#    - name: "Jython on Windows"
+#      os: windows
