--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,10 @@ matrix:
         - pwd
         - mkdir future
         - mkdir six
-        - tar -xvzf future.tar.gz -C future --strip-components 1 && cd .. && cp future/src/future/ ~/Downloads/Jython/Lib/
-        - tar -xvzf six.tar.gz -C six --strip-components 1 & cd .. && cp six/six.py ~/Downloads/Jython/Lib/
+        - tar -xvzf future.tar.gz -C future --strip-components 1 && pwd && cd .. && pwd
+        #- cp future/src/future/ ~/Downloads/Jython/Lib/
+        - tar -xvzf six.tar.gz -C six --strip-components 1 && pwd && cd .. && pwd
+        #- cp six/six.py ~/Downloads/Jython/Lib/
         - cd ~
-      install:
-        "./travis/run-jython-tests.sh"
+#      install:
+        #"./travis/run-jython-tests.sh"
