Added Jython test file and travis config on bash for OSX.

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,8 @@ matrix:
         - pwd
         - mkdir future
         - mkdir six
-        - tar -xvzf future.tar.gz -C future --strip-components 1 && pwd && cd .. && pwd
+        - ls -l
+        - tar -xvzf future.tar.gz -C future --strip-components 1 && ls -l && pwd && cd .. && ls -l && pwd
         #- cp future/src/future/ ~/Downloads/Jython/Lib/
         - tar -xvzf six.tar.gz -C six --strip-components 1 && pwd && cd .. && pwd
         #- cp six/six.py ~/Downloads/Jython/Lib/
