--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,10 @@ matrix:
         - mkdir future
         - mkdir six
         - ls -l
-        - tar -xvzf future.tar.gz -C future --strip-components 1 && ls -l && pwd && cd .. && ls -l && pwd
+        - tar -xzf future.tar.gz -C future --strip-components 1 && pwd && ls -l && pwd && cd .. && ls -l && pwd
         #- cp future/src/future/ ~/Downloads/Jython/Lib/
-        - tar -xvzf six.tar.gz -C six --strip-components 1 && pwd && cd .. && pwd
+        #- tar -xvzf six.tar.gz -C six --strip-components 1 && pwd && cd .. && pwd
         #- cp six/six.py ~/Downloads/Jython/Lib/
-        - cd ~
+        #- cd ~
 #      install:
         #"./travis/run-jython-tests.sh"
