--- a/.travis.yml
+++ b/.travis.yml
@@ -40,13 +40,11 @@ matrix:
         - wget -O ~/Downloads/future.tar.gz https://files.pythonhosted.org/packages/90/52/e20466b85000a181e1e144fd8305caf2cf475e2f9674e797b222f8105f5f/future-0.17.1.tar.gz
         - wget -O ~/Downloads/six.tar.gz https://files.pythonhosted.org/packages/dd/bf/4138e7bfb757de47d1f4b6994648ec67a51efe58fa907c1e11e350cddfca/six-1.12.0.tar.gz
         - cd ~/Downloads/
-        - pwd
+        #- pwd
         - mkdir future
-        - mkdir six        
-        - tar -xzf future.tar.gz -C future --strip-components 1 && cd future && ls -l && pwd && ls -l && pwd && cd .. && ls -l && pwd
-        #- cp future/src/future/ ~/Downloads/Jython/Lib/
-        #- tar -xvzf six.tar.gz -C six --strip-components 1 && pwd && cd .. && pwd
-        #- cp six/six.py ~/Downloads/Jython/Lib/
-        #- cd ~
-#      install:
-        #"./travis/run-jython-tests.sh"
+        - mkdir six
+        - tar -xzf future.tar.gz -C future --strip-components 1 && cp future/src/future/ ~/Downloads/Jython/Lib/
+        - tar -xvzf six.tar.gz -C six --strip-components 1 && cp six/six.py ~/Downloads/Jython/Lib/
+        - cd ~
+      install:
+        "./travis/run-jython-tests.sh"
