--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,8 @@ matrix:
         #- pwd
         - mkdir future
         - mkdir six
-        - tar -xzf future.tar.gz -C future --strip-components 1 && cp future/src/future/ ~/Downloads/Jython/Lib/
-        - tar -xvzf six.tar.gz -C six --strip-components 1 && cp six/six.py ~/Downloads/Jython/Lib/
+        - tar -xzf future.tar.gz -C future --strip-components 1 && mv future/src/future/ ~/Downloads/Jython/Lib/
+        - tar -xvzf six.tar.gz -C six --strip-components 1 && mv six/six.py ~/Downloads/Jython/Lib/
         - cd ~
       install:
         "./travis/run-jython-tests.sh"
