Added Jython test file and travis config on bash for OSX.

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ matrix:
       jdk:
         - oraclejdk6
       before_install:
+        - pwd && ls -l
         - mkdir ~/Downloads/Jython
         - mkdir ~/Downloads/Jython/Lib
         - wget -O ~/Downloads/Jython/jython.jar https://repo1.maven.org/maven2/org/python/jython-standalone/2.7.1/jython-standalone-2.7.1.jar
