--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,6 @@ matrix:
         - mkdir six
         - tar -xzf future.tar.gz -C future --strip-components 1 && mv future/src/future/ ~/Downloads/Jython/Lib/
         - tar -xvzf six.tar.gz -C six --strip-components 1 && mv six/six.py ~/Downloads/Jython/Lib/
-        - cd /Users/travis/build/wrvenkat/request_parser
+        - cd /Users/travis/build/wrvenkat/request_parser        
       install:
-        "./travis/run-jython-tests.sh"
+        "./.travis/run-jython-tests.sh"
