--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ matrix:
         - "3.6"
     - name: "Python 3.7 on OSX"
       os: osx
-      python:        
-        - "3.7"
+      osx_image: xcode11
+      language: shell      
     - name: "Python 3.7 on Windows"
       os: windows
       language: shell
